代码沙箱-原生实现、处理高危操作